cmake_minimum_required(VERSION 2.6)

project (yb_proof_2018 CXX)

set(YB_PROOF_2018_HEADERS yb_proof_2018.hpp)

set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(YB_PROOF_2018_CODEGEN_DIR "${PROJECT_BINARY_DIR}/codegen")

PREPEND(YB_PROOF_2018_HEADERS_PATHS ${PROJECT_SOURCE_DIR} ${YB_PROOF_2018_HEADERS})

CODEGEN_FILES(YB_PROOF_2018_CODEGEN_SOURCES ${YB_PROOF_2018_CODEGEN_DIR} ${YB_PROOF_2018_HEADERS})

add_custom_command(OUTPUT ${YB_PROOF_2018_CODEGEN_SOURCES}
    COMMAND ${NGREST_BIN_PATH}ngrestcg -i "${PROJECT_SOURCE_DIR}" -o ${YB_PROOF_2018_CODEGEN_DIR} -t service ${YB_PROOF_2018_HEADERS}
    DEPENDS ${YB_PROOF_2018_HEADERS_PATHS}
)

file(GLOB YB_PROOF_2018_SOURCES ${PROJECT_SOURCE_DIR}/*.cpp ${PROJECT_SOURCE_DIR}/*.hpp)

list(APPEND YB_PROOF_2018_SOURCES ${YB_PROOF_2018_CODEGEN_SOURCES})

include_directories(${PROJECT_SOURCE_DIR})

add_library(yb_proof_2018 MODULE ${YB_PROOF_2018_SOURCES})

set_target_properties(yb_proof_2018 PROPERTIES PREFIX "")
set_target_properties(yb_proof_2018 PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SERVICES_DIR}"
)

target_link_libraries(yb_proof_2018 ngrestutils ngrestcommon ngrestjson ngrestengine)
